testing form to json

--- a/src/form.html
+++ b/src/form.html
@@ -80,16 +80,6 @@
             </form>
         </div>
     </div>
+    <script src="form.js"></script>
 </body>
 </html>
-<script>
-    // let fermerFormulaire = document.getElementById('fermerFormulaire');
-    // let allIframes = WA.ui.website.getAll();
-    // let colorsMenuIframe = allIframes.find(iframe => iframe.url === './src/html/colors.html')
-    // if(colorsMenuIframe) {
-    //     fermerFormulaire.addEventListener('click', function() {
-    //         colors.close();
-    //     });
-    //     colorsMenuIframe.close();
-    // }
-</script>
