--- a/src/houses.html
+++ b/src/houses.html
@@ -112,7 +112,7 @@
         }
 
         function goToRoom() {
-            WA.nav.goToRoom("./houses.tmj");
+            WA.nav.goToRoom("./house1_floor1.tmj");
         }
     </script>
 </body>
